# zignolz-analytics-api

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
docs/: async_improvements.md
examples/: async_usage.py  performance_benchmark.py  run_sp500_fundamentals_FULL.ipynb  run_sp500_fundamentals_LIMITED.ipynb  sp500_fundamentals_features.ipynb
models/data/sp500/: stock_recommendations_current_week.json
models/sp500/: config.yaml  config_loader.py  fundamentals.py  sp500_tickers.json
models/tests/: test_fundamentals.py  test_fundamentals_async.py  test_recommended_stocks.py
