[project]
name = "zignolz-analytics-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jupyter>=1.1.1",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "polars>=1.33.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "types-requests>=2.32.4.20250913",
]

[dependency-groups]
dev = ["pre-commit>=4.3.0", "ruff>=0.13.0"]
